# open2x

./: README.Open2x
CVSROOT/: loginfo  modules
apps/mp2x_4_1/: mp2x  mp2x.ini  mp2x_topalign.ini  readme.txt
apps/mplayer.old/: DirDisplay.h  DirList.c  FontDisplay.c  csource.lst  drawcontrol.h  dualcpu.h  filelistview.h  glock.h  (+17 more)
bootloader/: README.Open2x
buildroot/: .config  .config.cmd  .config.old  Config.in  Makefile  TODO
buildroot-new/: .config  .config.cmd  .config.old  Config.in  Makefile
firmware/: makefile  readme.txt
jtag-gp2x/: OPEN2X  README  gp2x_unbrick.sh  jtag.c  main.c  memory.c  parse.c  parse.h  regs.c
kernel/: .config  Makefile
launcher/: README.txt
libs/: issues.txt  makefile  makefile.arm-linux  makefile.legacy  makefile.o2x  open2x-libs.sh  readme.txt
libs-gp2x/: build_libs.sh
libs-new/: Makefile  README.OPEN2X  buildroot-build.sh  issues.txt  open2x-libs.sh
libs/SDL-1.2.9/src/video/gp2x/: Makefile  Makefile.am  Makefile.in  SDL_gp2xevents.c  SDL_gp2xevents_c.h  SDL_gp2xmouse.c  SDL_gp2xvideo.c  SDL_gp2xvideo.h  gp2x_tslib.c  mmsp2_regs.h
libs/SDL-1.2.9/src/video/gp2x/.deps/: SDL_gp2xevents.Plo  SDL_gp2xmouse.Plo  SDL_gp2xvideo.Plo
linux-mmsp2/: .depss_module_installdir  Makefile
linux-open2x/: Makefile  Rules.make  svn-commit.tmp
linux-open2x-2.4.25_FW1/: .config
tool-chain/: OPEN2X  README  TODO
toolchain/: makefile  readme.txt
toolchain-new/: mktarball.sh  open2x-gp2x-apps.sh  open2x-gp2x-kernel-3.sh  open2x-gp2x-kernel.sh  open2x-gp2x.sh
u-boot-mmsp2/: Makefile  OPEN2X  baudrate
utils/: README.Open2x
(+4823 files in other folders)
