
## Makefile.am for SDL using the gp2x video driver

noinst_LTLIBRARIES = libvideo_gp2x.la
libvideo_gp2x_la_SOURCES = $(gp2x_SRCS)

# The SDL gp2x video driver sources
gp2x_SRCS = 			\
	gp2x_tslib.c		\
	SDL_gp2xvideo.h		\
	SDL_gp2xevents.c	\
	SDL_gp2xevents_c.h	\
	SDL_gp2xmouse.c		\
	SDL_gp2xmouse_c.h	\
	SDL_gp2xvideo.c

